mobile: fix critical -40px offset on #ppu350 (was clipping all Muse content)

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,6 +52,8 @@
     width: 100% !important;
     float: none !important;
     display: block !important;
+    margin-left: 0 !important;  /* Neutralise le -40px Muse */
+    left: 0 !important;
   }
 
   /* Neutraliser les margin-top Muse sur les colelem/grpelem */
